--- a/sudoku.opam
+++ b/sudoku.opam
@@ -12,6 +12,8 @@ bug-reports: "https://github.com/username/reponame/issues"
 depends: [
   "ocaml"
   "dune" {>= "3.15"}
+  "yojson"
+  "logs"
   "odoc" {with-doc}
 ]
 build: [
